<resources>
    <string name="app_name">Shopping List Next Generation</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="offline" translatable="false">Offline</string>
    <string name="email" translatable="false">Email</string>
    <string name="account_created">Account created</string>
    <string name="login_failed">Login failed</string>
    <string name="add_new">Add list</string>
    <string name="back">Back</string>
    <string name="confirm">Confirm</string>
    <string name="new_shopping_list">New shopping list</string>
    <string name="shopping_list_title">Shopping list title</string>
    <string name="new_item">New item</string>
    <string name="shopping_list_added">Shopping list added</string>
    <string name="error">Error</string>
    <string name="ok" translatable="false">OK</string>
    <string name="cancel">Cancel</string>
    <string name="delete_list">Delete shopping list</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="enter_name_of_new_product">Enter name of new product</string>
    <string name="delete_product">Delete product</string>
    <string name="add_new_shopping_list">Add new shopping list</string>
    <string name="click_again_to_exit">Click again to exit</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="copy_code_to_clipboard">Copy code to clipboard</string>
    <string name="send_code">Send code</string>
    <string name="share_using">Share using</string>
    <string name="share_your_shopping_list">Share your shopping list</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="add_shared_list">Add shared list</string>
    <string name="scanning_canceled">Scanning canceled</string>
    <string name="success">Success</string>
    <string name="cancel_shareing">Cancel sharing</string>
    <string name="cancel_sharing_sure">Are you sure you do not want to use this list anymore?</string>
    <string name="you_have_too_much_shared_lists">You have too many shared lists</string>
    <string name="this_list_is_already_added">This list is already added</string>
    <string name="you_can_not_share_your_own_list">You can not share your own list</string>
    <string name="shopping_list_name">Shopping list name</string>
    <string name="privacy_policy">Privacy policy</string>>
</resources>
