<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AddNewListActivity">

    <Button
            android:text="@string/back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/add_back_button" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/add_confirm_button"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
    <Button
            android:text="@string/confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/add_confirm_button"
            app:layout_constraintStart_toEndOf="@+id/add_back_button" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/add_shopping_list_title" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/add_screen_title" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            android:hint="@string/shopping_list_title"/>
    <TextView
            android:text="@string/new_shopping_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/add_screen_title" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            android:textSize="28sp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/add_single_item_field" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/add_shopping_list_title" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/add_item_button" android:hint="@string/new_item"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true" android:src="@drawable/ic_add_black_24dp"
            android:id="@+id/add_item_button"
            app:layout_constraintTop_toTopOf="@+id/add_single_item_field" app:layout_constraintBottom_toBottomOf="@+id/add_single_item_field"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toEndOf="@+id/add_single_item_field" app:layout_constraintHorizontal_bias="0.5"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"/>
    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="0dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/add_item_button" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/add_back_button" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:id="@+id/add_recycler_view"/>
</androidx.constraintlayout.widget.ConstraintLayout>